# storyteller

./: .gitignore  .gitmodules  CMakeLists.txt  Community.hpp  LICENSE.md  Parameters.hpp  Person.hpp  README.md  Simulator.hpp  community.cpp  community.hpp  lewnard_model.json  main  main.cpp  parameters.cpp  parameters.hpp  person.cpp  person.hpp  process_config.R  sim.vis  sim_w_dashboard.sh  simulator.cpp  simulator.hpp
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/basic_config/: CMakeLists.txt  basic_config.json  basic_config_tome.lua  main.cpp  process_config.R
examples/basic_config/config/: metrics.lua  parameters.lua
examples/basic_config/figs/: simvis.R
examples/default/: tome.lua
examples/default/config/: parameters.lua
examples/default_sim/: tome.lua
examples/default_sim/config/: metrics.lua  parameters.lua
examples/default_sim/figs/: synthpop_dash.R
figs/: sim_dash.R  simvis.R
include/storyteller/: community.hpp  database_handler.hpp  ledger.hpp  parameters.hpp  person.hpp  simulator.hpp  storyteller.hpp  tome.hpp  utility.hpp
scripts/: simvis.R  slurp_metrics_into_db.R
src/: CMakeLists.txt  community.cpp  community.hpp  database_handler.cpp  ledger.cpp  ledger.hpp  parameters.cpp  parameters.hpp  person.cpp  person.hpp  simulator.cpp  simulator.hpp  storyteller.cpp  tome.cpp  utility.cpp  utility.hpp
tests/: CMakeLists.txt
